--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=139.196.106.241
 DB_PORT=3306
-DB_DATABASE=doc
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=sing-product
+DB_USERNAME=sing-product
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
